[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprite/crafting_option.png" type="Texture" id=1]
[ext_resource path="res://crafting_option.gd" type="Script" id=2]
[ext_resource path="res://sprite/dirt_icon.png" type="Texture" id=3]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://visitor1.ttf"

[sub_resource type="DynamicFont" id=2]
size = 10
font_data = SubResource( 1 )

[node name="crafting_option" type="TextureRect"]
margin_left = 70.0
margin_top = 103.0
margin_right = 110.0
margin_bottom = 143.0
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="icon" type="TextureRect" parent="."]
margin_left = 1.0
margin_top = 4.0
margin_right = 41.0
margin_bottom = 44.0
texture = ExtResource( 3 )

[node name="output_count" type="Label" parent="."]
margin_left = 1.0
margin_top = 19.0
margin_right = 17.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.168627, 0.117647, 0.0352941, 1 )
text = "10"
align = 2
valign = 1
[connection signal="mouse_entered" from="." to="." method="mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="mouse_exited"]
